--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,17 +5,13 @@
 
     "types": []
   },
-  
-  "angularCompilerOptions": {
-    "enableIvy": true
-  },
 
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.d.ts"
   ],
   "exclude": [
     "src/test.ts",
