added angular univesal Support

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,9 @@
 
     "types": []
   },
-
+  "angularCompilerOptions": {
+    "enableIvy": true
+  },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
