--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0-rc.11",
-    "@angular/common": "~9.0.0-rc.11",
-    "@angular/compiler": "~9.0.0-rc.11",
-    "@angular/core": "~9.0.0-rc.11",
-    "@angular/forms": "~9.0.0-rc.11",
-    "@angular/platform-browser": "~9.0.0-rc.11",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
-    "@angular/platform-server": "~9.0.0-rc.11",
-    "@angular/router": "~9.0.0-rc.11",
+    "@angular/animations": "~9.0.0",
+    "@angular/common": "~9.0.0",
+    "@angular/compiler": "~9.0.0",
+    "@angular/core": "~9.0.0",
+    "@angular/forms": "~9.0.0",
+    "@angular/platform-browser": "~9.0.0",
+    "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/platform-server": "~9.0.0",
+    "@angular/router": "~9.0.0",
     "@nguniversal/express-engine": "^8.2.6",
     "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
     "express": "^4.15.2",
@@ -34,10 +34,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.11",
-    "@angular/cli": "~9.0.0-rc.11",
-    "@angular/compiler-cli": "~9.0.0-rc.11",
-    "@angular/language-service": "~9.0.0-rc.11",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "~9.0.1",
+    "@angular/compiler-cli": "~9.0.0",
+    "@angular/language-service": "~9.0.0",
     "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
